--- a/training/flan-t5-samsum-summarization.ipynb
+++ b/training/flan-t5-samsum-summarization.ipynb
@@ -280,18 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/ubuntu/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import evaluate\n",
     "import nltk\n",
@@ -432,20 +423,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "![lilt_training](../assets/lilt_training.png)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Epoch\tTraining Loss\tValidation Loss\tRouge1\tRouge2\tRougel\tRougelsum\tGen Len\n",
-    "4\t1.237800\t1.375733\t47.855700\t24.059300\t40.232400\t44.008500\t17.305250"
+    "\n",
+    "![flan-t5-tensorboard](../assets/flan-t5-tensorboard.png)"
    ]
   },
   {
@@ -620,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:56:21) \n[GCC 10.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
