--- a/training/flan-t5-samsum-summarization.ipynb
+++ b/training/flan-t5-samsum-summarization.ipynb
@@ -397,6 +397,7 @@
     "\n",
     "# Create Trainer instance\n",
     "trainer = Seq2SeqTrainer(\n",
+    "    tokenizer=tokenizer,\n",
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=tokenized_dataset[\"train\"],\n",
@@ -510,8 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save our tokenizer and create model card\n",
-    "tokenizer.save_pretrained(repository_id)\n",
+    "# Create model card\n",
     "trainer.create_model_card()\n",
     "# Push the results to the hub\n",
     "trainer.push_to_hub()"
