--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,10 @@
     "summary_column = \"highlights\"\n",
     "prompt_start = \"Summarize the following news article:\\n\"\n",
     "generation_start = \"\\nSummary:\\n\"\n",
-    "prompt_template = f\"{prompt_start}{{input}}{generation_start}\""
+    "prompt_template = f\"{prompt_start}{{input}}{generation_start}\"\n",
+    "\n",
+    "max_source_length=500\n",
+    "max_target_length=129"
    ]
   },
   {
@@ -495,31 +498,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/deep-learning-pytorch-huggingface/training/flan-t5-base-cnn is already a clone of https://huggingface.co/philschmid/flan-t5-base-cnn. Make sure you pull the latest changes with `repo.git_pull()`.\n",
-      "/home/ubuntu/.local/lib/python3.8/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "***** Running training *****\n",
-      "  Num examples = 287113\n",
-      "  Num Epochs = 3\n",
-      "  Instantaneous batch size per device = 8\n",
-      "  Total train batch size (w. parallel, distributed & accumulation) = 8\n",
-      "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 107670\n",
-      "  Number of trainable parameters = 247577856\n",
-      "  0%|                                                | 0/107670 [00:00<?, ?it/s]You're using a T5TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "{'loss': 1.9537, 'learning_rate': 4.976780904615956e-05, 'epoch': 0.01}         \n",
-      "{'loss': 1.9408, 'learning_rate': 4.953561809231913e-05, 'epoch': 0.03}         \n",
-      "  1%|▎                                 | 1052/107670 [07:56<13:22:13,  2.22it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
@@ -536,48 +517,144 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "46h on v100 with deespeed z3 offload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deepspeed --num_gpus=1 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-base --dataset_path data --epochs 3 --per_device_train_batch_size 8 --per_device_eval_batch_size 8 --generation_max_length 129 --lr 5e-5 --deepspeed configs/ds_flan_t5_z3_config.json --repository_id flan-t5-base-cnn\n"
+      "deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py --model_id --dataset_path --epochs 3 --per_device_train_batch_size 8 --per_device_eval_batch_size 8 --generation_max_length --lr 5e-5 --deepspeed configs/ds_flan_t5_z3_config.json --repository_id\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-base --dataset_path data --epochs 3 --per_device_train_batch_size 8 --per_device_eval_batch_size 8 --generation_max_length 129 --lr 1e-5 --deepspeed configs/ds_flan_t5_z3_config.json --repository_id flan-t5-base-cnn\n"
      ]
     }
    ],
    "source": [
-    "!echo deepspeed --num_gpus=1 scripts/run_seq2seq_deepspeed.py \\\n",
+    "!echo deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
     "    --epochs 3 \\\n",
     "    --per_device_train_batch_size 8 \\\n",
     "    --per_device_eval_batch_size 8 \\\n",
     "    --generation_max_length $max_target_length \\\n",
-    "    --lr 5e-5 \\\n",
+    "    --lr 1e-5 \\\n",
+    "    --deepspeed configs/ds_flan_t5_z3_config.json \\\n",
+    "    --repository_id $repository_id "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FLAN-T5 XL (3B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_id = \"google/flan-t5-xl\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xl --dataset_path data --epochs 3 --per_device_train_batch_size 1 --per_device_eval_batch_size 1 --generation_max_length 129 --lr 1e-5 --deepspeed configs/ds_flan_t5_z3_config.json --repository_id flan-t5-base-cnn\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py \\\n",
+    "    --model_id $model_id \\\n",
+    "    --dataset_path $save_dataset_path \\\n",
+    "    --epochs 3 \\\n",
+    "    --per_device_train_batch_size 1 \\\n",
+    "    --per_device_eval_batch_size 1 \\\n",
+    "    --generation_max_length $max_target_length \\\n",
+    "    --lr 1e-5 \\\n",
     "    --deepspeed configs/ds_flan_t5_z3_config.json \\\n",
     "    --repository_id $repository_id "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated memory needed for params, optim states and gradients for a:\n",
+      "HW: Setup with 1 node, 4 GPUs per node.\n",
+      "SW: Model with 2849M total params, 65M largest layer params.\n",
+      "  per CPU  |  per GPU |   Options\n",
+      "   71.66GB |   0.25GB | offload_param=cpu , offload_optimizer=cpu , zero_init=1\n",
+      "   71.66GB |   0.25GB | offload_param=cpu , offload_optimizer=cpu , zero_init=0\n",
+      "   63.70GB |   1.57GB | offload_param=none, offload_optimizer=cpu , zero_init=1\n",
+      "   63.70GB |   1.57GB | offload_param=none, offload_optimizer=cpu , zero_init=0\n",
+      "    1.47GB |  12.19GB | offload_param=none, offload_optimizer=none, zero_init=1\n",
+      "   63.70GB |  12.19GB | offload_param=none, offload_optimizer=none, zero_init=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.local/lib/python3.8/site-packages/transformers/models/auto/modeling_auto.py:1238: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoConfig, AutoModelWithLMHead\n",
+    "from accelerate import init_empty_weights\n",
+    "from deepspeed.runtime.zero.stage3 import estimate_zero3_model_states_mem_needs_all_cold\n",
+    "\n",
+    "\n",
+    "model_id=\"google/flan-t5-xl\"\n",
+    "num_gpus=4\n",
+    "\n",
+    "# get parameters\n",
+    "config = AutoConfig.from_pretrained(model_id)\n",
+    "with init_empty_weights():\n",
+    "    model = AutoModelWithLMHead.from_config(config)\n",
+    "    model_parameter = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "    largest_layer = max([p.numel() for p in model.parameters() if p.requires_grad])\n",
+    "\n",
+    "\n",
+    "# calculate needed memory\n",
+    "estimate_zero3_model_states_mem_needs_all_cold(model_parameter,largest_layer_params=largest_layer, num_gpus_per_node=num_gpus,num_nodes=1)"
+   ]
   }
  ],
  "metadata": {
