added new configs for bf16

--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -10,12 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!sudo apt install git-lfs"
+    "!sudo apt install git-lfs\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
    ]
   },
   {
@@ -31,37 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installed CUDA version 11.0 does not match the version torch was compiled with 11.6 but since the APIs are compatible, accepting this combination\n",
-      "Time to load cpu_adam op: 2.3554303646087646 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using /home/ubuntu/.cache/torch_extensions/py38_cu116 as PyTorch extensions root...\n",
-      "No modifications detected for re-loaded extension module cpu_adam, skipping build step...\n",
-      "Loading extension module cpu_adam...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<module 'cpu_adam' from '/home/ubuntu/.cache/torch_extensions/py38_cu116/cpu_adam/cpu_adam.so'>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import deepspeed\n",
     "deepspeed.ops.op_builder.CPUAdamBuilder().load()"
@@ -69,19 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/bin/python3: No module named ds_report\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python3 -m ds_report"
+    "!ds_report"
    ]
   },
   {
@@ -94,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# experiment config\n",
-    "model_id = \"google/flan-t5-xxl\"\n",
+    "model_id = \"google/flan-t5-xl\"\n",
     "repository_id = \"flan-t5-xl-cnn\"\n",
     "\n",
     "# Dataset \n",
@@ -125,9 +99,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 5.79MB/s]\n",
-      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 6.98MB/s]\n",
-      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 9.46MB/s]\n"
+      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 10.7MB/s]\n",
+      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 13.7MB/s]\n",
+      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 20.8MB/s]\n"
      ]
     },
     {
@@ -141,12 +115,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 159M/159M [00:02<00:00, 65.4MB/s]\n",
-      "Downloading data: 100%|██████████| 376M/376M [00:06<00:00, 60.7MB/s]]\n",
-      "Downloading data: 46.4MB [00:00, 73.3MB/s]/5 [00:08<00:14,  4.77s/it]\n",
-      "Downloading data: 2.43MB [00:00, 64.3MB/s]                  3.90s/it]\n",
-      "Downloading data: 2.11MB [00:00, 63.8MB/s]                  2.46s/it]\n",
-      "Downloading data files: 100%|██████████| 5/5 [00:12<00:00,  2.45s/it]\n",
+      "Downloading data: 100%|██████████| 159M/159M [00:01<00:00, 128MB/s]\n",
+      "Downloading data: 100%|██████████| 376M/376M [00:02<00:00, 126MB/s]t]\n",
+      "Downloading data: 46.4MB [00:00, 131MB/s]2/5 [00:04<00:06,  2.33s/it]\n",
+      "Downloading data: 2.43MB [00:00, 117MB/s]                   2.45s/it]\n",
+      "Downloading data: 2.11MB [00:00, 110MB/s]                   1.60s/it]\n",
+      "Downloading data files: 100%|██████████| 5/5 [00:07<00:00,  1.50s/it]\n",
       "                                                                                           \r"
      ]
     },
@@ -161,11 +135,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 305.14it/s]\n",
-      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 830kB/s]\n",
-      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 103MB/s]\n",
-      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 157MB/s]\n",
-      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 723kB/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 379.36it/s]\n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 1.19MB/s]\n",
+      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 82.1MB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 263MB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 1.33MB/s]\n"
      ]
     },
     {
@@ -194,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 288/288 [05:51<00:00,  1.22s/ba]\n",
-      "100%|██████████| 14/14 [00:16<00:00,  1.15s/ba]\n",
-      "100%|██████████| 12/12 [00:14<00:00,  1.17s/ba]\n"
+      "100%|██████████| 288/288 [02:55<00:00,  1.64ba/s]\n",
+      "100%|██████████| 14/14 [00:08<00:00,  1.72ba/s]\n",
+      "100%|██████████| 12/12 [00:07<00:00,  1.71ba/s]\n"
      ]
     },
     {
@@ -364,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +347,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,15 +363,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 scripts/run_seq2seq_deepspeed.py \\\n",
+    "!echo deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
-    "    --repository_id $repository_id \\\n",
     "    --epochs 3 \\\n",
-    "    --per_device_train_batch_size 8 \\\n",
-    "    --per_device_eval_batch_size 8 \\\n",
+    "    --per_device_train_batch_size 24 \\\n",
+    "    --per_device_eval_batch_size 24 \\\n",
     "    --generation_max_length $max_target_length \\\n",
-    "    --lr 5e-5 "
+    "    --lr 1e-4 \\\n",
+    "    --deepspeed configs/ds_flan_t5_z3_offload_bf16.json \\\n",
+    "    --repository_id $repository_id "
    ]
   },
   {
@@ -410,33 +385,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 1 --per_device_eval_batch_size 1 --generation_max_length 129 --lr 1e-5 --deepspeed configs/ds_flan_t5_z3_offload.json --repository_id flan-t5-xl-cnn\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 32 --per_device_eval_batch_size 32 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_offload_bf16.json\n"
      ]
     }
    ],
    "source": [
-    "!echo deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py \\\n",
+    "!echo deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
     "    --epochs 3 \\\n",
-    "    --per_device_train_batch_size 1 \\\n",
-    "    --per_device_eval_batch_size 1 \\\n",
+    "    --per_device_train_batch_size 32 \\\n",
+    "    --per_device_eval_batch_size 32 \\\n",
     "    --generation_max_length $max_target_length \\\n",
-    "    --lr 1e-5 \\\n",
-    "    --deepspeed configs/ds_flan_t5_z3_offload.json \\\n",
-    "    --repository_id $repository_id "
+    "    --lr 1e-4 \\\n",
+    "    --deepspeed configs/ds_flan_t5_z3_offload_bf16.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -444,15 +422,23 @@
      "output_type": "stream",
      "text": [
       "Estimated memory needed for params, optim states and gradients for a:\n",
-      "HW: Setup with 1 node, 1 GPU per node.\n",
-      "SW: Model with 2849M total params, 65M largest layer params.\n",
+      "HW: Setup with 1 node, 8 GPUs per node.\n",
+      "SW: Model with 11135M total params, 131M largest layer params.\n",
       "  per CPU  |  per GPU |   Options\n",
-      "   71.66GB |   0.25GB | offload_param=cpu , offload_optimizer=cpu , zero_init=1\n",
-      "   71.66GB |   0.25GB | offload_param=cpu , offload_optimizer=cpu , zero_init=0\n",
-      "   63.70GB |   5.55GB | offload_param=none, offload_optimizer=cpu , zero_init=1\n",
-      "   63.70GB |   5.55GB | offload_param=none, offload_optimizer=cpu , zero_init=0\n",
-      "    0.37GB |  48.02GB | offload_param=none, offload_optimizer=none, zero_init=1\n",
-      "   15.92GB |  48.02GB | offload_param=none, offload_optimizer=none, zero_init=0\n"
+      "  280.01GB |   0.49GB | offload_param=cpu , offload_optimizer=cpu , zero_init=1\n",
+      "  497.79GB |   0.49GB | offload_param=cpu , offload_optimizer=cpu , zero_init=0\n",
+      "  248.89GB |   3.08GB | offload_param=none, offload_optimizer=cpu , zero_init=1\n",
+      "  497.79GB |   3.08GB | offload_param=none, offload_optimizer=cpu , zero_init=0\n",
+      "    5.88GB |  23.82GB | offload_param=none, offload_optimizer=none, zero_init=1\n",
+      "  497.79GB |  23.82GB | offload_param=none, offload_optimizer=none, zero_init=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.local/lib/python3.8/site-packages/transformers/models/auto/modeling_auto.py:1238: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -462,8 +448,8 @@
     "from deepspeed.runtime.zero.stage3 import estimate_zero3_model_states_mem_needs_all_cold\n",
     "\n",
     "\n",
-    "model_id=\"google/flan-t5-xl\"\n",
-    "num_gpus=1\n",
+    "model_id=\"google/flan-t5-xxl\"\n",
+    "num_gpus=8\n",
     "\n",
     "# get parameters\n",
     "config = AutoConfig.from_pretrained(model_id)\n",
@@ -488,15 +474,23 @@
     "training examples: `287113`\n",
     "validation examples: `13368`\n",
     "\n",
+    "setups: \n",
+    "- 4x V100 16GB: p3.8xlarge\n",
+    "- 8x V100 16GB: p3.16xlarge\n",
+    "- 8x A100 40GB: p4dn.24xlarge\n",
     "\n",
-    "| Model           | DS offload | Hardware     | batch size per GPU | duration | cost |\n",
-    "|-----------------|------------|--------------|--------------------|----------|------|\n",
-    "| FLAN-T5-XL (3B) | No         | 4x V100 16GB | OOM                | -        | -    |\n",
-    "| FLAN-T5-XL (3B) | No         | 8x V100 16GB | 1                | 105h        | ~$2570    |\n",
-    "| FLAN-T5-XL (3B) | Yes         | 4x V100 16GB | 8                | 69h        | ~$828    |\n",
-    "| FLAN-T5-XL (3B) | Yes         | 8x V100 16GB | 8                | 32        | ~$768   |\n",
-    "| FLAN-T5-XXL (11B) | Yes         | 4x V100 16GB | OOM                | -        | -   |\n",
-    "| FLAN-T5-XXL (11B) | Yes         | 8x V100 16GB | OOM                | -        | -   |"
+    "\n",
+    "| Model             | DS offload | Hardware     | batch size per GPU | precision | duration | cost   |\n",
+    "|-------------------|------------|--------------|--------------------|-----------|----------|--------|\n",
+    "| FLAN-T5-XL (3B)   | No         | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
+    "| FLAN-T5-XL (3B)   | No         | 8x V100 16GB | 1                  | fp32      | 105h     | ~$2570 |\n",
+    "| FLAN-T5-XL (3B)   | No         | 8x A100 40GB |                  |    bf16       |          |        |\n",
+    "| FLAN-T5-XL (3B)   | Yes        | 4x V100 16GB | 8                  | fp32      | 69h      | ~$828  |\n",
+    "| FLAN-T5-XL (3B)   | Yes        | 8x V100 16GB | 8                  | fp32      | 32h      | ~$768  |\n",
+    "| FLAN-T5-XL (3B)   | Yes        | 8x A100 40GB |                  |    bf16       |          |        |\n",
+    "| FLAN-T5-XXL (11B) | Yes        | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
+    "| FLAN-T5-XXL (11B) | Yes        | 8x V100 16GB | OOM                | fp32      | -        | -      |\n",
+    "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 24                 | bf16      | 32h      | ~$1024 |"
    ]
   },
   {
