--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -5,6 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Todos\n",
+    "\n",
+    "* [ ] test bf16 3b no offload\n",
+    "* [ ] test bf16 3b offload\n",
+    "* [ ] find max bs 11B -> test 40/48/56/64"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Install dependencies"
    ]
   },
@@ -15,8 +27,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!sudo apt install git-lfs\n",
-    "            \n"
+    "!sudo apt install git-lfs"
    ]
   },
   {
@@ -484,13 +495,13 @@
     "|-------------------|------------|--------------|--------------------|-----------|----------|--------|\n",
     "| FLAN-T5-XL (3B)   | No         | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XL (3B)   | No         | 8x V100 16GB | 1                  | fp32      | 105h     | ~$2570 |\n",
-    "| FLAN-T5-XL (3B)   | No         | 8x A100 40GB |                  |    bf16       |          |        |\n",
+    "| FLAN-T5-XL (3B)   | No         | 8x A100 40GB | 32                 |           |          |        |\n",
     "| FLAN-T5-XL (3B)   | Yes        | 4x V100 16GB | 8                  | fp32      | 69h      | ~$828  |\n",
     "| FLAN-T5-XL (3B)   | Yes        | 8x V100 16GB | 8                  | fp32      | 32h      | ~$768  |\n",
-    "| FLAN-T5-XL (3B)   | Yes        | 8x A100 40GB |                  |    bf16       |          |        |\n",
+    "| FLAN-T5-XL (3B)   | Yes        | 8x A100 40GB | 64                 |           |          |        |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 8x V100 16GB | OOM                | fp32      | -        | -      |\n",
-    "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 24                 | bf16      | 32h      | ~$1024 |"
+    "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 32                 | bf16      | 24h      | ~$768  |"
    ]
   },
   {
