added more a100 tests

--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -5,18 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Todos\n",
-    "\n",
-    "* [ ] test bf16 3b no offload\n",
-    "* [ ] test bf16 3b offload\n",
-    "* [ ] find max bs 11B -> test 40/48/56/64"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Install dependencies"
    ]
   },
@@ -79,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# experiment config\n",
-    "model_id = \"google/flan-t5-xl\"\n",
+    "model_id = \"google/flan-t5-xxl\"\n",
     "repository_id = \"flan-t5-xl-cnn\"\n",
     "\n",
     "# Dataset \n",
@@ -103,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 10.7MB/s]\n",
-      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 13.7MB/s]\n",
-      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 20.8MB/s]\n"
+      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 4.08MB/s]\n",
+      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 9.95MB/s]\n",
+      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 248kB/s]\n"
      ]
     },
     {
@@ -126,12 +114,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 159M/159M [00:01<00:00, 128MB/s]\n",
-      "Downloading data: 100%|██████████| 376M/376M [00:02<00:00, 126MB/s]t]\n",
-      "Downloading data: 46.4MB [00:00, 131MB/s]2/5 [00:04<00:06,  2.33s/it]\n",
-      "Downloading data: 2.43MB [00:00, 117MB/s]                   2.45s/it]\n",
-      "Downloading data: 2.11MB [00:00, 110MB/s]                   1.60s/it]\n",
-      "Downloading data files: 100%|██████████| 5/5 [00:07<00:00,  1.50s/it]\n",
+      "Downloading data: 100%|██████████| 159M/159M [00:01<00:00, 92.4MB/s]\n",
+      "Downloading data: 100%|██████████| 376M/376M [00:14<00:00, 26.2MB/s]]\n",
+      "Downloading data: 46.4MB [00:00, 119MB/s]2/5 [00:17<00:30, 10.08s/it]\n",
+      "Downloading data: 2.43MB [00:00, 46.3MB/s]                  7.17s/it]\n",
+      "Downloading data: 2.11MB [00:00, 15.5MB/s]/5 [00:22<00:04,  4.52s/it]\n",
+      "Downloading data files: 100%|██████████| 5/5 [00:22<00:00,  4.51s/it]\n",
       "                                                                                           \r"
      ]
     },
@@ -146,11 +134,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 379.36it/s]\n",
-      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 1.19MB/s]\n",
-      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 82.1MB/s]\n",
-      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 263MB/s]\n",
-      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 1.33MB/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 353.65it/s]\n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 323kB/s]\n",
+      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 22.2MB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 4.32MB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 225kB/s]"
      ]
     },
     {
@@ -159,6 +147,13 @@
      "text": [
       "Train dataset size: 287113\n",
       "Test dataset size: 11490\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -179,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 288/288 [02:55<00:00,  1.64ba/s]\n",
-      "100%|██████████| 14/14 [00:08<00:00,  1.72ba/s]\n",
-      "100%|██████████| 12/12 [00:07<00:00,  1.71ba/s]\n"
+      "100%|██████████| 288/288 [03:31<00:00,  1.36ba/s]\n",
+      "100%|██████████| 14/14 [00:09<00:00,  1.44ba/s]\n",
+      "100%|██████████| 12/12 [00:08<00:00,  1.44ba/s]\n"
      ]
     },
     {
@@ -349,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +353,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,20 +365,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 8 --per_device_eval_batch_size 8 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_config_bf16.json\n"
+     ]
+    }
+   ],
    "source": [
     "!echo deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
     "    --epochs 3 \\\n",
-    "    --per_device_train_batch_size 24 \\\n",
-    "    --per_device_eval_batch_size 24 \\\n",
+    "    --per_device_train_batch_size 8 \\\n",
+    "    --per_device_eval_batch_size 8 \\\n",
     "    --generation_max_length $max_target_length \\\n",
     "    --lr 1e-4 \\\n",
-    "    --deepspeed configs/ds_flan_t5_z3_offload_bf16.json \\\n",
-    "    --repository_id $repository_id "
+    "    --deepspeed configs/ds_flan_t5_z3_config_bf16.json "
    ]
   },
   {
@@ -396,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +413,7 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 32 --per_device_eval_batch_size 32 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_offload_bf16.json\n"
+      "deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 48 --per_device_eval_batch_size 48 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_offload_bf16.json\n"
      ]
     }
    ],
@@ -416,8 +422,8 @@
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
     "    --epochs 3 \\\n",
-    "    --per_device_train_batch_size 32 \\\n",
-    "    --per_device_eval_batch_size 32 \\\n",
+    "    --per_device_train_batch_size 48 \\\n",
+    "    --per_device_eval_batch_size 48 \\\n",
     "    --generation_max_length $max_target_length \\\n",
     "    --lr 1e-4 \\\n",
     "    --deepspeed configs/ds_flan_t5_z3_offload_bf16.json"
@@ -482,8 +488,12 @@
     "# Results\n",
     "\n",
     "dataset: `\"cnn_dailymail\"`\n",
-    "training examples: `287113`\n",
-    "validation examples: `13368`\n",
+    "-  training examples: `287113`\n",
+    "-  validation examples: `13368`\n",
+    "\n",
+    "hyperparamters:\n",
+    "- epochs: `3`\n",
+    "- learning rate: `1e-4`\n",
     "\n",
     "setups: \n",
     "- 4x V100 16GB: p3.8xlarge\n",
@@ -495,13 +505,13 @@
     "|-------------------|------------|--------------|--------------------|-----------|----------|--------|\n",
     "| FLAN-T5-XL (3B)   | No         | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XL (3B)   | No         | 8x V100 16GB | 1                  | fp32      | 105h     | ~$2570 |\n",
-    "| FLAN-T5-XL (3B)   | No         | 8x A100 40GB | 32                 |           |          |        |\n",
+    "| FLAN-T5-XL (3B)   | No         | 8x A100 40GB | 72                 | bf16     |   2,5h       | ~$81       |\n",
     "| FLAN-T5-XL (3B)   | Yes        | 4x V100 16GB | 8                  | fp32      | 69h      | ~$828  |\n",
     "| FLAN-T5-XL (3B)   | Yes        | 8x V100 16GB | 8                  | fp32      | 32h      | ~$768  |\n",
-    "| FLAN-T5-XL (3B)   | Yes        | 8x A100 40GB | 64                 |           |          |        |\n",
+    "| FLAN-T5-XXL (11B) | No        | 8x A100 40GB | 8                | bf16      | 10h        | ~$322      |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 8x V100 16GB | OOM                | fp32      | -        | -      |\n",
-    "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 32                 | bf16      | 24h      | ~$768  |"
+    "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 48                | bf16      | 19h      | ~$613  |"
    ]
   },
   {
