--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 4.08MB/s]\n",
-      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 9.95MB/s]\n",
-      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 248kB/s]\n"
+      "/opt/conda/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading builder script: 100%|██████████| 8.33k/8.33k [00:00<00:00, 8.18MB/s]\n",
+      "Downloading metadata: 100%|██████████| 9.88k/9.88k [00:00<00:00, 12.0MB/s]\n",
+      "Downloading readme: 100%|██████████| 15.1k/15.1k [00:00<00:00, 15.8MB/s]\n"
      ]
     },
     {
@@ -114,12 +116,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 159M/159M [00:01<00:00, 92.4MB/s]\n",
-      "Downloading data: 100%|██████████| 376M/376M [00:14<00:00, 26.2MB/s]]\n",
-      "Downloading data: 46.4MB [00:00, 119MB/s]2/5 [00:17<00:30, 10.08s/it]\n",
-      "Downloading data: 2.43MB [00:00, 46.3MB/s]                  7.17s/it]\n",
-      "Downloading data: 2.11MB [00:00, 15.5MB/s]/5 [00:22<00:04,  4.52s/it]\n",
-      "Downloading data files: 100%|██████████| 5/5 [00:22<00:00,  4.51s/it]\n",
+      "Downloading data: 100%|██████████| 159M/159M [00:01<00:00, 112MB/s]\n",
+      "Downloading data: 100%|██████████| 376M/376M [00:03<00:00, 111MB/s]t]\n",
+      "Downloading data: 46.4MB [00:00, 120MB/s]2/5 [00:04<00:07,  2.64s/it]\n",
+      "Downloading data: 2.43MB [00:00, 115MB/s]                   2.64s/it]\n",
+      "Downloading data: 2.11MB [00:00, 100MB/s]                   1.69s/it]\n",
+      "Downloading data files: 100%|██████████| 5/5 [00:08<00:00,  1.61s/it]\n",
       "                                                                                           \r"
      ]
     },
@@ -134,11 +136,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 353.65it/s]\n",
-      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 323kB/s]\n",
-      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 22.2MB/s]\n",
-      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 4.32MB/s]\n",
-      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 225kB/s]"
+      "100%|██████████| 3/3 [00:00<00:00, 437.97it/s]\n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 2.54k/2.54k [00:00<00:00, 601kB/s]\n",
+      "Downloading (…)\"spiece.model\";: 100%|██████████| 792k/792k [00:00<00:00, 116MB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 2.42M/2.42M [00:00<00:00, 279MB/s]\n",
+      "Downloading (…)cial_tokens_map.json: 100%|██████████| 2.20k/2.20k [00:00<00:00, 1.80MB/s]\n"
      ]
     },
     {
@@ -147,13 +149,6 @@
      "text": [
       "Train dataset size: 287113\n",
       "Test dataset size: 11490\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -174,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,30 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 288/288 [03:31<00:00,  1.36ba/s]\n",
-      "100%|██████████| 14/14 [00:09<00:00,  1.44ba/s]\n",
-      "100%|██████████| 12/12 [00:08<00:00,  1.44ba/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Keys of tokenized dataset: ['input_ids', 'attention_mask', 'labels']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                   \r"
+      " 15%|█▍        | 42/288 [00:21<02:12,  1.86ba/s]"
      ]
     }
    ],
@@ -344,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,28 +381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 48 --per_device_eval_batch_size 48 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_offload_bf16.json\n"
+      "deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py --model_id google/flan-t5-xxl --dataset_path data --epochs 3 --per_device_train_batch_size 24 --per_device_eval_batch_size 24 --generation_max_length 129 --lr 1e-4 --deepspeed configs/ds_flan_t5_z3_offload_bf16.json\n"
      ]
     }
    ],
    "source": [
-    "!echo deepspeed --num_gpus=8 scripts/run_seq2seq_deepspeed.py \\\n",
+    "!echo deepspeed --num_gpus=4 scripts/run_seq2seq_deepspeed.py \\\n",
     "    --model_id $model_id \\\n",
     "    --dataset_path $save_dataset_path \\\n",
     "    --epochs 3 \\\n",
-    "    --per_device_train_batch_size 48 \\\n",
-    "    --per_device_eval_batch_size 48 \\\n",
+    "    --per_device_train_batch_size 24 \\\n",
+    "    --per_device_eval_batch_size 24 \\\n",
     "    --generation_max_length $max_target_length \\\n",
     "    --lr 1e-4 \\\n",
     "    --deepspeed configs/ds_flan_t5_z3_offload_bf16.json"
@@ -485,6 +460,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "T5 11B needs 22GB to GPU at minium with activations, weights etc. to be then offloaded, thats why the v100 16GB is not enough."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Results\n",
     "\n",
     "dataset: `\"cnn_dailymail\"`\n",
@@ -497,6 +480,7 @@
     "\n",
     "setups: \n",
     "- 4x V100 16GB: p3.8xlarge\n",
+    "- 4x A10G 24GB: g5.24xlarge\n",
     "- 8x V100 16GB: p3.16xlarge\n",
     "- 8x A100 40GB: p4dn.24xlarge\n",
     "\n",
@@ -511,6 +495,7 @@
     "| FLAN-T5-XXL (11B) | No        | 8x A100 40GB | 8                | bf16      | 10h        | ~$322      |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 4x V100 16GB | OOM                | fp32      | -        | -      |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 8x V100 16GB | OOM                | fp32      | -        | -      |\n",
+    "| FLAN-T5-XXL (11B) | Yes        | 4x A10G 24GB | 24                | bf16      | 90h      | ~$732  |\n",
     "| FLAN-T5-XXL (11B) | Yes        | 8x A100 40GB | 48                | bf16      | 19h      | ~$613  |"
    ]
   },
@@ -522,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -536,12 +521,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
    }
   }
  },
