--- a/training/deepseed-flan-t5-summarization.ipynb
+++ b/training/deepseed-flan-t5-summarization.ipynb
@@ -122,9 +122,9 @@
     }
    ],
    "source": [
-    "prompt_lenght = len(tokenizer(prompt_template.format(input=\"\"))[\"input_ids\"])\n",
-    "max_sample_length = tokenizer.model_max_length - prompt_lenght\n",
-    "print(f\"Prompt length: {prompt_lenght}\")\n",
+    "prompt_length = len(tokenizer(prompt_template.format(input=\"\"))[\"input_ids\"])\n",
+    "max_sample_length = tokenizer.model_max_length - prompt_length\n",
+    "print(f\"Prompt length: {prompt_length}\")\n",
     "print(f\"Max input length: {max_sample_length}\")\n",
     "\n",
     "# Prompt length: 12\n",
@@ -263,7 +263,7 @@
     "    inputs = [prompt_template.format(input=item) for item in sample[text_column]]\n",
     "\n",
     "    # tokenize inputs\n",
-    "    model_inputs = tokenizer(inputs, max_length=max_source_length, padding=padding, truncation=True)\n",
+    "    model_inputs = tokenizer(inputs, max_length=tokenizer.model_max_length, padding=padding, truncation=True)\n",
     "\n",
     "    # Tokenize targets with the `text_target` keyword argument\n",
     "    labels = tokenizer(text_target=sample[summary_column], max_length=max_target_length, padding=padding, truncation=True)\n",
